src/app/public/home/containers/home/home.component.scss
@import "./../../../../../scss/_variables";

:host {display: inline-block; width: 100%; height: 100%}

.full-screen {
  height: calc(100% - #{$max-footer-height} - #{$min-header-height});
}

.container, .row {
  height: 100%;
  position: relative;
}

.logged-user-section {
  height: 100%;
}

.notification__container {
  height: 700px;
  max-height: 700px;
  overflow: hidden;

  .notification__img-container {
    margin-top: -60px;
  }
}

.trip-type__container {
  height: 700px;
  max-height: 700px;
  overflow: hidden;

  .row, .container {
    height: auto;
  }
  .col-md-6 {
    max-height: 400px;
  }
}

.pwa-container {
  height: 700px;
  max-height: 700px;
  overflow: hidden;
}

#questions-area {
  top: 110%;
  position: relative;
  width: 100%;
  height: 100%;
  display: none;
  align-items: center;
}


// ***************************************  ANIMATIONS  ***************************************
.appearFromBottom {
  display: flex!important;
  animation-name: appearFromBottom;
  animation-duration: 2s;
  animation-fill-mode: forwards;
  -webkit-animation-name: appearFromBottom;
  -webkit-animation-duration: 2s;
  -webkit-animation-fill-mode: forwards;
}

.disappearToTop {
  animation-name: disappearToTop;
  animation-duration: 1s;
  animation-fill-mode: forwards;
  -webkit-animation-name: disappearToTop;
  -webkit-animation-duration: 1s;
  -webkit-animation-fill-mode: forwards;
}

@keyframes disappearToTop {
    0%   {position: relative;top:0px;opacity:1;}
    50%  {position: relative;top:-550px;opacity:0.5;}
    100% {position: relative;top:-1100px;opacity:0;}
}

@keyframes appearFromBottom {
  0%   {position: relative;top:1100px;opacity:0;}
  50%  {position: relative;top:550px;opacity:0.5;}
  100% {position: relative;top:0px;opacity:1;}
}

@media (min-width: 992px){
  h1{
    line-height: 60px;
  }
}

